--- a/src/main/resources/com/vertex/vos/PhysicalInventory.fxml
+++ b/src/main/resources/com/vertex/vos/PhysicalInventory.fxml
@@ -15,138 +15,139 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.PhysicalInventoryController">
-   <stylesheets>
-      <URL value="@assets/global.css" />
-      <URL value="@assets/table.css" />
-      <URL value="@assets/style.css" />
-   </stylesheets>
-   <center>
-      <TableView fx:id="physicalInventoryDetailsTableView" stylesheets="@assets/table.css" BorderPane.alignment="CENTER">
-         <columns>
-            <TableColumn prefWidth="75.0" text="Product">
-               <columns>
-                  <TableColumn fx:id="codeCol" prefWidth="75.0" text="Code" />
-                  <TableColumn fx:id="nameCol" prefWidth="75.0" text="Name" />
-                  <TableColumn fx:id="unitCol" prefWidth="75.0" text="Unit" />
-                  <TableColumn fx:id="priceCol" prefWidth="75.0" text="Price" />
-                  <TableColumn fx:id="breakdownCol" prefWidth="75.0" text="Breakdown" />
-               </columns>
-            </TableColumn>
-            <TableColumn prefWidth="75.0" text="Findings">
-               <columns>
-                  <TableColumn fx:id="sysCountCol" prefWidth="75.0" style="-fx-background-color: #2E5077;" text="System Count" />
-                  <TableColumn fx:id="physCountCol" prefWidth="75.0" style="-fx-background-color: #79D7BE;" text="Physical Count" />
-                  <TableColumn fx:id="varianceCol" prefWidth="75.0" style="-fx-background-color: #4DA1A9;" text="Variance" />
-                  <TableColumn fx:id="differenceCol" prefWidth="75.0" style="-fx-background-color: #DDA853;" text="Difference Cost" />
-               </columns>
-            </TableColumn>
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-   </center>
-   <top>
-      <HBox spacing="10.0" BorderPane.alignment="CENTER">
-         <children>
-            <BorderPane>
-               <top>
-                  <HBox spacing="10.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <Label fx:id="header" styleClass="header" text="PH-1" />
-                        <VBox>
-                           <children>
-                              <Label text="Supplier" />
-                              <TextField fx:id="supplierFilter" />
-                           </children>
-                        </VBox>
-                        <VBox layoutX="487.0" layoutY="10.0">
-                           <children>
-                              <Label text="Date Encoded" />
-                              <DatePicker fx:id="dateEncoded" />
-                           </children>
-                        </VBox>
-                        <VBox layoutX="747.0" layoutY="10.0">
-                           <children>
-                              <Label text="Cut-off Date" />
-                              <DatePicker fx:id="cutOffDate" />
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-               </top>
-               <center>
-                  <HBox spacing="10.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <VBox>
-                           <children>
-                              <Label text="Branch" />
-                              <TextField fx:id="branchFilter" />
-                           </children>
-                        </VBox>
-                        <VBox layoutX="10.0" layoutY="10.0" prefHeight="60.0" prefWidth="141.0">
-                           <children>
-                              <Label text="Branch Code" />
-                              <TextField fx:id="branchCode" editable="false" />
-                           </children>
-                        </VBox>
-                        <VBox layoutX="260.0" layoutY="10.0" prefHeight="60.0" prefWidth="194.0">
-                           <children>
-                              <Label text="Product Category" />
-                              <TextField fx:id="productCategoryFilter" />
-                           </children>
-                        </VBox>
-                        <VBox layoutX="510.0" layoutY="10.0" prefHeight="60.0" prefWidth="143.0">
-                           <children>
-                              <Label text="PH Type" />
-                              <ComboBox fx:id="inventoryType" style="-fx-border-color: linear-gradient(to bottom, #155E98, #7c9ebb);;" />
-                           </children>
-                        </VBox>
-                        <VBox layoutX="760.0" layoutY="10.0" prefHeight="60.0" prefWidth="149.0">
-                           <children>
-                              <Label text="Price Type" />
-                              <ComboBox fx:id="priceType" style="-fx-border-color: linear-gradient(to bottom, #155E98, #7c9ebb);;" />
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-               </center>
-               <bottom>
-                  <HBox BorderPane.alignment="CENTER" />
-               </bottom>
-            </BorderPane>
-         </children>
-      </HBox>
-   </top>
-   <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-   </padding>
-   <bottom>
-      <BorderPane BorderPane.alignment="CENTER">
-         <left>
-            <VBox prefHeight="89.0" prefWidth="470.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Label text="Remarks" />
-                  <TextArea fx:id="remarks" prefHeight="200.0" prefWidth="200.0" />
-               </children>
-            </VBox>
-         </left>
-         <right>
-            <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-              <buttons>
-                <Button fx:id="confirmButton" mnemonicParsing="false" text="Confirm" />
-                  <Button fx:id="commitButton" mnemonicParsing="false" text="Commit" />
-              </buttons>
-            </ButtonBar>
-         </right>
-         <top>
-            <HBox alignment="BASELINE_RIGHT" BorderPane.alignment="CENTER">
-               <children>
-                  <Label fx:id="differentialAmount" text="Label" />
-               </children>
-            </HBox>
-         </top>
-      </BorderPane>
-   </bottom>
+<BorderPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.PhysicalInventoryController">
+    <stylesheets>
+        <URL value="@assets/global.css" />
+        <URL value="@assets/table.css" />
+        <URL value="@assets/style.css" />
+    </stylesheets>
+    <center>
+        <TableView fx:id="physicalInventoryDetailsTableView" editable="true" stylesheets="@assets/table.css" BorderPane.alignment="CENTER">
+            <columns>
+                <TableColumn prefWidth="75.0" text="Product">
+                    <columns>
+                        <TableColumn fx:id="codeCol" prefWidth="75.0" text="Code" />
+                        <TableColumn fx:id="nameCol" prefWidth="75.0" text="Name" />
+                        <TableColumn fx:id="unitCol" prefWidth="75.0" text="Unit" />
+                        <TableColumn fx:id="priceCol" prefWidth="75.0" text="Price" />
+                        <TableColumn fx:id="breakdownCol" prefWidth="75.0" text="Packaging" />
+                    </columns>
+                </TableColumn>
+                <TableColumn prefWidth="75.0" text="Findings">
+                    <columns>
+                        <TableColumn fx:id="sysCountCol" prefWidth="75.0" style="-fx-background-color: #2E5077; -fx-text-fill: #FFFFFF;" text="System Count" />
+                        <TableColumn fx:id="physCountCol" prefWidth="75.0" style="-fx-background-color: #79D7BE;-fx-text-fill: #FFFFFF;" text="Physical Count" />
+                        <TableColumn fx:id="varianceCol" prefWidth="75.0" style="-fx-background-color: #4DA1A9;-fx-text-fill: #FFFFFF;" text="Variance" />
+                        <TableColumn fx:id="differenceCol" prefWidth="75.0" style="-fx-background-color: #DDA853;-fx-text-fill: #FFFFFF;" text="Difference Cost" />
+                  <TableColumn fx:id="statusCol" prefWidth="75.0" text="Remarks" />
+                    </columns>
+                </TableColumn>
+            </columns>
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+        </TableView>
+    </center>
+    <top>
+        <HBox spacing="10.0" BorderPane.alignment="CENTER">
+            <children>
+                <BorderPane>
+                    <top>
+                        <HBox spacing="10.0" BorderPane.alignment="CENTER">
+                            <children>
+                                <Label fx:id="header" styleClass="header" text="PH-1" />
+                                <VBox>
+                                    <children>
+                                        <Label text="Supplier" />
+                                        <TextField fx:id="supplierFilter" />
+                                    </children>
+                                </VBox>
+                                <VBox disable="true" layoutX="487.0" layoutY="10.0">
+                                    <children>
+                                        <Label text="Date Encoded" />
+                                        <DatePicker fx:id="dateEncoded" />
+                                    </children>
+                                </VBox>
+                                <VBox layoutX="747.0" layoutY="10.0">
+                                    <children>
+                                        <Label text="Cut-off Date" />
+                                        <DatePicker fx:id="cutOffDate" />
+                                    </children>
+                                </VBox>
+                            </children>
+                        </HBox>
+                    </top>
+                    <center>
+                        <HBox spacing="10.0" BorderPane.alignment="CENTER">
+                            <children>
+                                <VBox>
+                                    <children>
+                                        <Label text="Branch" />
+                                        <TextField fx:id="branchFilter" />
+                                    </children>
+                                </VBox>
+                                <VBox disable="true" layoutX="10.0" layoutY="10.0" prefHeight="60.0" prefWidth="141.0">
+                                    <children>
+                                        <Label text="Branch Code" />
+                                        <TextField fx:id="branchCode" editable="false" />
+                                    </children>
+                                </VBox>
+                                <VBox layoutX="260.0" layoutY="10.0" prefHeight="60.0" prefWidth="194.0">
+                                    <children>
+                                        <Label text="Product Category" />
+                                        <TextField fx:id="productCategoryFilter" />
+                                    </children>
+                                </VBox>
+                                <VBox layoutX="510.0" layoutY="10.0" prefHeight="60.0" prefWidth="143.0">
+                                    <children>
+                                        <Label text="PH Type" />
+                                        <ComboBox fx:id="inventoryType" style="-fx-border-color: linear-gradient(to bottom, #155E98, #7c9ebb);;" />
+                                    </children>
+                                </VBox>
+                                <VBox layoutX="760.0" layoutY="10.0" prefHeight="60.0" prefWidth="149.0">
+                                    <children>
+                                        <Label text="Price Type" />
+                                        <ComboBox fx:id="priceType" style="-fx-border-color: linear-gradient(to bottom, #155E98, #7c9ebb);;" />
+                                    </children>
+                                </VBox>
+                            </children>
+                        </HBox>
+                    </center>
+                    <bottom>
+                        <HBox BorderPane.alignment="CENTER" />
+                    </bottom>
+                </BorderPane>
+            </children>
+        </HBox>
+    </top>
+    <padding>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+    </padding>
+    <bottom>
+        <BorderPane BorderPane.alignment="CENTER">
+            <left>
+                <VBox prefHeight="89.0" prefWidth="470.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <Label text="Remarks" />
+                        <TextArea fx:id="remarks" prefHeight="200.0" prefWidth="200.0" />
+                    </children>
+                </VBox>
+            </left>
+            <right>
+                <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                    <buttons>
+                        <Button fx:id="confirmButton" mnemonicParsing="false" text="Confirm" />
+                        <Button fx:id="commitButton" mnemonicParsing="false" text="Commit" />
+                    </buttons>
+                </ButtonBar>
+            </right>
+            <top>
+                <HBox alignment="BASELINE_RIGHT" BorderPane.alignment="CENTER">
+                    <children>
+                        <Label fx:id="differentialAmount" text="Label" />
+                    </children>
+                </HBox>
+            </top>
+        </BorderPane>
+    </bottom>
 </BorderPane>
