--- a/src/main/resources/com/vertex/vos/SalesInvoiceProductSelectionTemp.fxml
+++ b/src/main/resources/com/vertex/vos/SalesInvoiceProductSelectionTemp.fxml
@@ -13,8 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<BorderPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoiceProductSelectionTempController">
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoiceProductSelectionTempController">
    <top>
       <HBox spacing="10.0" BorderPane.alignment="CENTER">
          <children>
@@ -49,6 +48,8 @@
             <TableColumn fx:id="descriptionCol" prefWidth="75.0" text="Description" />
             <TableColumn fx:id="unitCol" prefWidth="75.0" text="Unit" />
             <TableColumn fx:id="quantityCol" prefWidth="75.0" text="Quantity" />
+            <TableColumn fx:id="discountTypeCol" prefWidth="75.0" text="Discount Type" />
+            <TableColumn fx:id="unitPriceCol" prefWidth="75.0" text="Unit Price" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -63,7 +64,7 @@
    <bottom>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <buttons>
-          <Button fx:id="confirmBUtton" mnemonicParsing="false" text="Confirm" />
+          <Button fx:id="confirmButton" mnemonicParsing="false" text="Confirm" />
         </buttons>
       </ButtonBar>
    </bottom>
